feat: add optional event video generation
